--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,16 @@
 {
-  "name": "Urgent Messages",
-  "short_name": "Urgent",
-  "description": "A real-time communication app to send urgent messages",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#007bff",
-  "icons": [
-    {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "SpinkCommunicator",
+    "short_name": "Communicator",
+    "description": "A communication app for real-time messages",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#1DA1F2",
+    "icons": [
+        {
+            "src": "icon.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        }
+    ]
 }
